@@ -1,5 +1,10 @@
 2016-04-19  Jason Merrill  <jason@redhat.com>
 
+	DR 2137
+	* call.c (implicit_conversion): If we choose a copy constructor
+	for list-initialization from the same type, the conversion is an
+	exact match.
+
 	* constexpr.c (breaks): Handle EXIT_EXPR.
 	(cxx_eval_loop_expr): Handle COMPOUND_EXPR body.
 	(cxx_eval_constant_expression): Handle EXIT_EXPR, improve handling
